# SentriFace

./: .gitignore  AGENTS.md  CMakeLists.txt  README.md  requirements.txt
docs/: README.md
docs/access/: access_control_backend_spec.md  rgb_liveness_anti_spoof_spec.md
docs/decision/: decision_module_interface_spec.md  decision_regression_checklist.md  decision_timeline_summary_guide.md
docs/detector/: detection_model_evaluation.md  detector_module_interface_spec.md  insightface_package_inspection.md  model_asset_acquisition.md  scrfd_detector_backend_spec.md  scrfd_model_io_verified.md  scrfd_offline_export_workflow.md  scrfd_offline_replay_end_to_end.md  scrfd_onnx_runner_workflow.md  scrfd_python_cpp_regression_guide.md  webcam_scrfd_series_guide.md  webcam_scrfd_validation_guide.md
docs/embedding/: alignment_module_interface_spec.md  baseline_embedding_manifest_workflow.md  embedding_assisted_relink_design.md  embedding_benchmark_report_template.md  embedding_candidate_asset_checklist.md  embedding_csv_to_manifest_workflow.md  embedding_model_evaluation.md  embedding_model_validation_plan.md  embedding_module_interface_spec.md  embedding_product_strategy.md  embedding_replay_comparison_guide.md  face_embedding_onnx_workflow.md  mock_embedding_replay_workflow.md  real_embedding_adaptive_replay_workflow.md  real_embedding_replay_workflow.md
docs/enrollment/: adaptive_prototype_policy.md  baseline_embedding_import_workflow.md  baseline_prototype_package_binary_spec.md  biometric_cloud_consent_and_retention_spec.md  enrollment_artifact_runner_guide.md  enrollment_baseline_import_runner_guide.md  enrollment_baseline_verify_runner_guide.md  enrollment_module_interface_spec.md  enrollment_store_v2_spec.md  feature_only_cloud_adaptation_spec.md  sqlite_persistence_evaluation.md
docs/host/: host_qt_enroll_detector_integration_spec.md  host_qt_enroll_state_machine.md  host_qt_enroll_tool_spec.md  host_qt_enroll_webcam_guide.md
docs/logging/: binary_logging_pipeline_spec.md  logging_system_spec.md  valgrind_workflow.md
docs/pipeline/: camera_module_interface_spec.md  ffmpeg_rtsp_frame_source_spec.md  ffmpeg_rtsp_validation_guide.md  offline_detection_replay_spec.md  offline_embedding_replay_spec.md  offline_sequence_runner_guide.md  offline_sequence_runner_spec.md  pipeline_glue_interface_spec.md  rtsp_artifact_to_offline_manifest.md  rtsp_validation_milestone.md  sample_pipeline_runner_guide.md
docs/platform/: geometry_numeric_boundary.md  onnxruntime_cpp_integration.md  rknn_conversion_and_generalization_guide.md  rknn_embedding_validation_checklist.md  rknn_multi_model_strategy.md  rknn_operator_compatibility_risk.md  rv1106_face_tracking_embedding_design.md  rv1106_kf_tracking_spec.md  rv1106_numeric_type_policy.md  rv1106_system_hardware_baseline.md  rv1106_tracking_technical_evaluation.md
docs/project/: bringup_notes.md  decision_log.md
docs/search/: dot_kernel_benchmark_guide.md  dot_kernel_strategy.md  embedding_search_intuition.md  embedding_search_intuition_zh_tw.md  large_scale_identity_search_strategy.md  search_index_package_binary_spec.md  (+4 more)
host/qt_enroll_app/: CMakeLists.txt
host/qt_enroll_app/include/qt_enroll_app/: capture_plan.hpp  enrollment_artifact.hpp  enrollment_session.hpp  frame_source.hpp  guidance_engine.hpp  main_window.hpp  observation_source.hpp  preview_widget.hpp  tuning.hpp
host/qt_enroll_app/resources/: placeholder_preview.txt  qt_enroll_app.qrc
host/qt_enroll_app/src/: capture_plan.cpp  enrollment_artifact.cpp  enrollment_session.cpp  frame_source.cpp  guidance_engine.cpp  main.cpp  main_window.cpp  observation_source.cpp  preview_widget.cpp
host/qt_enroll_app/translations/: sentriface_qt_enroll_en.ts  sentriface_qt_enroll_zh_TW.ts
tests/: CMakeLists.txt  association_test.cpp  dot_kernel_test.cpp  enrollment_artifact_import_test.cpp  enrollment_artifact_runner_test.cpp  enrollment_baseline_generation_test.cpp  enrollment_baseline_import_runner_test.cpp  enrollment_baseline_verify_runner_test.cpp  enrollment_search_v2_integration_test.cpp  enrollment_store_test.cpp  enrollment_store_v2_test.cpp  face_aligner_test.cpp  face_decision_test.cpp  face_detector_test.cpp  face_embedder_test.cpp  face_pipeline_test.cpp  face_quality_test.cpp  face_search_test.cpp  face_search_v2_debug_test.cpp  face_search_v2_person_aggregation_test.cpp  face_search_v2_test.cpp  frame_source_test.cpp  image_io_test.cpp  kalman_filter_test.cpp  manifest_face_detector_test.cpp  offline_sequence_runner_test.cpp  offline_sequence_runner_v2_test.cpp  offline_sequence_source_test.cpp  pipeline_report_test.cpp  sample_pipeline_runner_test.cpp  sample_pipeline_runner_v2_test.cpp  scrfd_face_detector_test.cpp  search_v2_pipeline_compat_test.cpp  system_logger_test.cpp  tracker_capacity_test.cpp  tracker_embedding_gate_test.cpp  tracker_embedding_interval_test.cpp  tracker_lifecycle_test.cpp  tracker_multiface_test.cpp  tracker_query_test.cpp  (+3 more)
tools/: bootstrap.sh  build_host_qt_debug.sh  build_host_qt_enroll.sh  convert_embedding_csv_to_manifest.py  convert_scrfd_csv_to_manifest.py  download_insightface_asset.sh  evaluate_decision_summary.py  evaluate_tracker_summary.py  ffmpeg_rtsp_smoke.sh  generate_mock_embedding_manifest.py  generate_offline_manifest.sh  inspect_insightface_package.sh  inspect_scrfd_onnx.py  log_archive.sh  log_collect.sh  log_inspect.sh  logcat_dump.py  resolve_scrfd_model_path.sh  run_baseline_embedding_onnx.py  run_dot_kernel_benchmark.sh  run_embedding_replay_comparison.sh  run_enrollment_baseline_embedding.sh  run_enrollment_baseline_embedding_cpp.sh  run_enrollment_baseline_import.sh  run_enrollment_baseline_verify.sh  run_face_embedding_onnx.py  run_host_qt_enroll_debug.sh  run_host_qt_enroll_webcam.sh  run_real_embedding_adaptive_replay.sh  run_real_embedding_replay.sh  run_scrfd_cpp_regression.sh  run_scrfd_offline_replay.sh  run_scrfd_onnx.py  run_valgrind_checks.sh  summarize_decision_timeline.py  summarize_tracker_timeline.py  sweep_relink_params.py  sweep_tracker_params.py  webcam_scrfd_series.sh  webcam_scrfd_smoke.sh
(+59 files in other folders)
